--- a/Sources/MFAnalyticsPackage/ViewControllers/Analytics.storyboard
+++ b/Sources/MFAnalyticsPackage/ViewControllers/Analytics.storyboard
@@ -611,6 +611,9 @@
                             <constraint firstItem="y29-fV-9zo" firstAttribute="height" secondItem="IAh-10-jzT" secondAttribute="height" multiplier="0.45" constant="1" id="zFo-HS-2o9"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="imgPoster" destination="8ud-fi-MP2" id="SI8-ei-Pyl"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SK8-MW-J0t" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
